@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    environment {
+      MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED"   
+    }    
 
     stages {   
         stage('Build with maven') {
@@ -18,6 +21,8 @@ pipeline {
 
            steps {
                   withSonarQubeEnv('sonar_scanner') {
+ 
+
              sh "mvn -f SampleWebApp/pom.xml sonar:sonar"      
                }
             }
@@ -29,16 +34,15 @@ pipeline {
         }
         stage('push to nexus') {
             steps {
-                nexusArtifactUploader artifacts: [[artifactId: 'SampleWebApp', classifier: '', file: 'SampleWebApp/target/SampleWebApp.war', type: 'war']], credentialsId: 'nexus', groupId: 'SampleWebApp', nexusUrl: 'ec2-18-208-200-1.compute-1.amazonaws.com:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-snapshots', version: '1.0-SNAPSHOT'
-            }   
+               nexusArtifactUploader artifacts: [[artifactId: 'SampleWebApp', classifier: '', file: 'SampleWebApp/target/SampleWebApp.war', type: 'war']], credentialsId: 'nexuspass', groupId: 'SampleWebApp', nexusUrl: 'ec2-3-90-208-239.compute-1.amazonaws.com:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-snapshots', version: '1.0-SNAPSHOT'
+            }  
             
         }
         
         stage('deploy to tomcat') {
           steps {
-              deploy adapters: [tomcat9(credentialsId: 'tomcat_ID', path: '', url: 'http://34.205.48.176:8080/')], contextPath: 'webapp', war: '**/*.war'
-             
-              
+             deploy adapters: [tomcat9(credentialsId: 'tomcatpassword', path: '', url: 'http://54.152.234.175:8080/')], contextPath: 'monolithic', war: '**/*.war'
+                          
               
           }
             
